methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:25: error: ')' expected but ';' found.
def motif(re : Color ; cy : Color) {
                     ^FlowerPot:25: error: ';' expected but ')' found.
def motif(re : Color ; cy : Color) {
                                 ^